--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
-this is the beta version of my portfolio i am learning to program and it will be better
+#this is the beta version of my portfolio i am learning to program and it will be better 
+
